--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,7 @@
 
         async function fetchRoomDetails() {
             try {
-                const response = await fetch('http://localhost:3000/roomdetails/');
+                const response = await fetch('http://13.233.193.49:3000/roomdetails/');
                 if (!response.ok) {
                     throw new Error('Failed to fetch room details');
                 }
