Your commit message

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,8 @@
                     <!-- <li class="item"> <a class="nav-link" href="##">Sign Up</a></li> -->
                     <li class="item"> <a class="nav-link" href="http://localhost:3000/login">Login</a></li>
                     <li class="item"> <a class="nav-link" href="http://localhost:3000/logout">Logout</a></li>
+                    <li class="item"> <a class="nav-link" href="/dashboard/">Dashboard</a></li>
+
                 </ul>
             </div>
         </div>
