Added some constraints to improve security and solved  non critical bugs

--- a/public/index.html
+++ b/public/index.html
@@ -69,6 +69,7 @@
                 <h2>Are you a Property Owner?</h2>
                 <a href="/roomdetails/postyourroom" class="post-property-btn">Post Free Property Ad</a>
                 <a href="/roomdetails/x" class="post-property-btn">Available Properties</a>
+                <a href="/profile" class="post-property-btn">Go to Profile</a>
             </div>
         </div>
 
